2001-01-14  Alan Modra  <alan@linuxcare.com.au>

	* config.bfd: Add linux target variant for elfxx-hppa.
	* configure.in: Recognize bfd_elf32_hppa_linux_vec and
	bfd_elf64_hppa_linux_vec.
	* configure: Regenerate.
	* elf64-hppa.c: Include elf64-target.h again to support linux
	target variant.
	(elf64_hppa_post_process_headers): Set ELFOSABI_LINUX for linux.
	* elf32-hppa.c: Include elf32-target.h again to support linux
	target variant.
	(elf32_hppa_post_process_headers): New function.
	(elf_backend_post_process_headers): Define.
	* targets.c (bfd_target_vector): Add bfd_elf64_hppa_linux_vec and
	bfd_elf32_hppa_linux_vec.

	* elf32-hppa.c (elf32_hppa_link_hash_table): Add text_segment_base,
	and data_segment_base fields.
	(elf32_hppa_link_hash_table_create ): Init them.
	(elf32_hppa_check_relocs): Update comments.
	(hppa_record_segment_addr): New function.
	(elf32_hppa_relocate_section): Call it.
	(final_link_relocate): Handle R_PARISC_SEGREL32.
	(elf32_hppa_final_link): New function.
	(bfd_elf32_bfd_final_link): Define to call it.
	(hppa_unwind_entry_compare): New function.
	* cache.c (bfd_open_file): Create files in write+read mode.

	* elf-hppa.h (elf_hppa_howto_table): Set bitsize value for
	SEGREL32 and numerous other relocs.  Change duplicate
	R_PARISC_NONE relocs to R_PARISC_UNIMPLEMENTED.

	* opncls.c (bfd_fdopenr): Add parens like the comment says around
	O_ACCMODE.

	* elf32-hppa.c (elf32_hppa_size_dynamic_sections): Don't create
	.plt entries for DT_INIT and DT_FINI.
	(elf32_hppa_finish_dynamic_sections): Remove special handling of
	DT_INIT and DT_FINI.

	* elf64-hppa.c (elf64_hppa_finish_dynamic_symbol): Use 16-bit
	offsets for stub .plt access if wide mode.  Check offset in range.

2001-01-13  Nick Clifton  <nickc@redhat.com>

	* elf32-fr30.c (fr30_elf_howto_table): Remove spurious blank
	line.

	* coffcode.h (coff_canonicalize_reloc): Remove spurious blank
	line.

2001-01-12  Alan Modra  <alan@linuxcare.com.au>
